tests/fixtures/go/valid/main-package/go.mod
module main-example

go 1.21