tests/fixtures/go/invalid/type-error/go.mod
module type-error-example

go 1.21